add Notification entity with fields for userId, title, message, isRead, createdAt, and type